# amaranthSieve

./: .env.toolchain  .gitignore  README.md  pyproject.toml  sieve.vcd
src/amaranth_sieve/: __init__.py  sieve.py  sieve2.py
tests/: test_sieve.py
