[project]
name = "amaranth_sieve"
version = "0.0.0"
description = "test"

requires-python = "==3.12.*"
dependencies = [
    "amaranth[builtin-yosys]~=0.5",
    "amaranth-boards @ git+https://github.com/amaranth-lang/amaranth-boards",
    "yowasp-yosys",
    "yowasp-nextpnr-ice40",
]



[tool.pdm.dev-dependencies]
test = [
    "pytest"
]

[tool.pdm.scripts]
_.env_file = ".env.toolchain"
test = { cmd = "pytest" }

